[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Амадей Базылбеков <mozart23@yandex.ru>"]
readme = "README.md"
packages = [{include = "hexlet_code"}, {include = "brain_games"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
